fix: Switch alert level to integer enumerations, make user strings translatable
NOTE: This completely overwrites the 0001 initial migration of the app, so you
need to `python migrate.py site_alert zero` and lose all your valuable alerts
before using this. I tried a few times writing a properly forwardable and
reversible migration for this, but the reverse step was more trouble than worth
it since nobody should be using this app yet.

This PR should probably be squashed before merge.

Refs: LIIK-861

--- a/site_alert/static/site_alert/css/site_alert.css
+++ b/site_alert/static/site_alert/css/site_alert.css
@@ -24,19 +24,19 @@
     border-bottom: 1px solid rgba(0,0,0,0.05);
 }
 
-.site-alert.alert-info {
+.site-alert.alert-0 {
     background-color: #e3f2fd; /* Light Blue */
     color: #0d47a1;
     border-bottom-color: #bbdefb;
 }
 
-.site-alert.alert-warning {
+.site-alert.alert-100 {
     background-color: #fff3cd; /* Light Yellow */
     color: #856404;
     border-bottom-color: #ffeeba;
 }
 
-.site-alert.alert-critical {
+.site-alert.alert-10000 {
     background-color: #f8d7da; /* Light Red */
     color: #721c24;
     border-bottom-color: #f5c6cb;
